fixed the weird hero flickering bug

--- a/_sass/_hero.scss
+++ b/_sass/_hero.scss
@@ -22,6 +22,7 @@
   .pixels {
     opacity: 0.8;
     background-image: url(../../assets/img/pixels.png);
+    background-attachment: fixed;
   }
 
   .gradient {
